tests/errors/test1.c
цел а=1,б;
ВЕЩ в1;
пусто ГЛАВНАЯ()
{
    int a=3;
    float a=4;
    a=a;
}